# smol-ml-tutorial

./: .gitignore  makefile  pyproject.toml  readme.md
notebooks/: v1.ipynb
src/: main.py
