[tool.poetry]
name = "smol-ml"
version = "0.1.0"
description = "from zero to hero"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.6"}
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
uvicorn = "^0.32.1"


[tool.poetry.group.dev.dependencies]
notebook = "^7.3.1"
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
